--- a/app/src/main/res/layout/activity_graph2.xml
+++ b/app/src/main/res/layout/activity_graph2.xml
@@ -6,39 +6,42 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@drawable/bg"
     tools:context="com.sarahchristina.motion.GraphActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:background="#00000000"
         android:id="@+id/buttons" >
 
         <Button
             android:id="@+id/btnStart"
+            android:background="#ff8100"
             android:layout_width="0dp"
+            android:layout_marginRight="5dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Start" />
 
         <Button
             android:id="@+id/btnStop"
+            android:background="#ff8100"
             android:layout_width="0dp"
+            android:layout_marginLeft="5dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Stop" />
 
-        <Button
-            android:id="@+id/btnUpload"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Upload" />
+
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/chart_container"
         android:layout_width="wrap_content"
+        android:paddingTop="10dp"
+        android:background="#00000000"
         android:layout_height="wrap_content"
         android:layout_below="@id/buttons" >
     </LinearLayout>
